# day-of-year-converter

./: CMakeLists.txt  README.md  doy.cpp
src/: CMakeLists.txt  Date.cpp  Date.h  cxxopts.hpp  doy.cpp
src/doylib/: Date.cpp  Date.h  DoyConverter.cpp  DoyConverter.h
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_DateConstruction.cpp  test_LeapYear.cpp
